--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "Blockbench",
 	"description": "Low-poly modeling and animation software",
-	"version": "4.3.1",
+	"version": "4.2.5",
 	"license": "GPL-3.0-or-later",
 	"author": {
 		"name": "JannisX11",
@@ -18,11 +18,6 @@
 		"appId": "blockbench",
 		"productName": "Blockbench",
 		"artifactName": "${productName}_${version}.${ext}",
-		"publish": [
-			{
-				"provider": "github"
-			}
-		],
 		"mac": {
 			"target": {
 				"target": "default",
@@ -31,7 +26,6 @@
 					"x64"
 				]
 			},
-			"artifactName": "${productName}_${arch}_${version}.${ext}",
 			"category": "macOS.application",
 			"hardenedRuntime": true,
 			"entitlements": "build/entitlements.mac.plist",
@@ -83,8 +77,7 @@
 				"rpm",
 				"appImage"
 			],
-			"category": "3DGraphics",
-			"icon": "build/icon.icns"
+			"category": "3DGraphics"
 		},
 		"fileAssociations": [
 			{
@@ -102,12 +95,13 @@
 		"beta": "electron-builder --windows portable",
 		"pwa": "node ./scripts/generate_pwa.js",
 		"prepublish": "npm run bundle && npm run pwa",
-		"webapp": "git checkout gh-pages && git merge master && git push && git checkout master"
+		"webapp": "git checkout gh-pages && git merge master && git push && git checkout master",
+		"windows" : "electron-builder build --windows --publish=never"
 	},
 	"devDependencies": {
 		"blockbench-types": "^4.0.0",
-		"electron": "^19.0.7",
-		"electron-builder": "^23.1.0",
+		"electron": "^17.4.1",
+		"electron-builder": "^23.0.3",
 		"electron-notarize": "^1.0.0",
 		"webpack": "^5.21.2",
 		"webpack-cli": "^4.5.0",
