--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
 		"beta": "electron-builder --windows portable",
 		"pwa": "node ./scripts/generate_pwa.js",
 		"prepublish": "npm run bundle && npm run pwa",
-		"webapp": "git checkout gh-pages && git merge master && git push && git checkout master"
+		"webapp": "git checkout gh-pages && git merge master && git push && git checkout master",
+		"windows" : "electron-builder build --windows --publish=never"
 	},
 	"devDependencies": {
 		"blockbench-types": "^4.0.0",
